# litesync-python3

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  setup_litesync.py
.github/workflows/: main.yml  wheels.yml
src/: blob.c  blob.h  cache.h  module.h  prepare_protocol.h  row.h  sqlite3.h
