[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[build-system.windows]
include-dirs = ["C:\\Windows\\System32"]
library-dirs = ["C:\\Windows\\System32"]

[tool.cibuildwheel]
build = "cp37* cp38* cp39* cp310*"
build-verbosity = 3

[tool.cibuildwheel.linux]
before-build = """
curl -O https://litesync.io/download/litesync-free-linux-x86_64.tar.gz
tar -xzvf litesync-free-linux-x86_64.tar.gz
./install
"""
build = "cp310-manylinux_x86_64, cp39-manylinux_x86_64, cp38-manylinux_x86_64, cp37-manylinux_x86_64"

[tool.cibuildwheel.windows]
before-build = "python setup_litesync.py install"
skip = "*-win32"

[tool.cibuildwheel.macos]
before-build = """
curl -O https://litesync.io/download/litesync-free-mac-x86_64.tar.gz
tar -xzvf litesync-free-mac-x86_64.tar.gz
./install
"""
